--- a/cookbook/smart-contracts/deploy-erc1155-token.mdx
+++ b/cookbook/smart-contracts/deploy-erc1155-token.mdx
@@ -1,272 +1,258 @@
 ---
 title: "Deploy an ERC-1155 Token"
-description: "Step-by-step guide to deploying an ERC-1155 (Multi-Token) on SKALE using Foundry and OpenZeppelin Contracts"
+description: "Step-by-step guide to deploying an ERC-1155 (Multi-Token Standard) on SKALE using Foundry or Hardhat with OpenZeppelin Contracts"
 ---
 
 ## Deploy an ERC-1155 Token
 
-This tutorial will walk you through deploying an ERC-1155 token on SKALE using Foundry and OpenZeppelin Contracts. ERC-1155 is a multi-token standard that can represent both fungible and non-fungible tokens in a single contract, making it ideal for games, marketplaces, and applications that need to manage multiple token types efficiently.
+OpenZeppelin provides secure, community-vetted smart contract templates that follow best practices for ERC-1155 multi-token contracts. ERC-1155 enables you to deploy **multiple fungible and non-fungible tokens** from a single contract — ideal for gaming, collectibles, and multi-asset systems.
+
+<Tabs>
+    <Tab title="Deployment with Foundry">
+
+        <Note title="Setup Foundry">
+        ## Step 0: Setup Foundry
+        
+        If your Foundry project isn't set up yet, please go to the [Foundry setup section](../deployment/setup-foundry) before proceeding.
+        </Note>
+
+        ## Step 1: Create the ERC-1155 Contract
+
+        Create a contract script in `src/MyERC721.sol`. Run:
+        ```shell
+        touch src/MyERC1155.sol
+        ```
+        
+        Add the contract code:
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "@openzeppelin/contracts/token/ERC1155/ERC1155.sol";
+
+        contract MyERC1155 is ERC1155 {
+            // Token IDs
+            uint256 public constant GOLD = 0;
+            uint256 public constant SILVER = 1;
+            uint256 public constant SWORD = 2;
+            uint256 public constant SHIELD = 3;
+
+            constructor() ERC1155("https://myapi.com/api/token/{id}.json") {
+                // Initial supply
+                _mint(msg.sender, GOLD, 1000, "");
+                _mint(msg.sender, SILVER, 500, "");
+                _mint(msg.sender, SWORD, 1, "");
+                _mint(msg.sender, SHIELD, 1, "");
+            }
+
+            function mint(address to, uint256 id, uint256 amount) public {
+                _mint(to, id, amount, "");
+            }
+
+            function mintBatch(
+                address to,
+                uint256[] memory ids,
+                uint256[] memory amounts
+            ) public {
+                _mintBatch(to, ids, amounts, "");
+            }
+        }
+        ```
+
+        This contract:
+        - Inherits OpenZeppelin’s `ERC1155`  
+        - Supports multiple token types  
+        - Sets a metadata URI using `{id}` placeholders  
+        - Implements single & batch minting  
+        - Mints initial supply on deployment  
+
+        <Note>
+        The URI string uses `{id}` as a placeholder that will be replaced automatically by compatible metadata servers.
+        </Note>
+
+        ## Step 2: Compile the Contract
+
+        ```shell
+        forge build
+        ```
+
+        ## Step 3: Prepare Signer for Deployment
+
+        Create a Foundry keystore:
+
+        ```shell
+        cast wallet import skale-deployer --private-key $(cast wallet new | grep 'Private key:' | awk '{print $3}')
+        ```
+
+        <Note>
+        Be sure to store your keystore password securely — it cannot be recovered.
+        </Note>
+
+        Retrieve your wallet address:
+
+        ```shell
+        cast wallet address --account skale-deployer
+        ```
+
+        Visit the [sFUEL Station](https://www.sfuelstation.com/), toggle testnet, and fill up your SKALE deployer wallet.
+
+        <Tip>
+        Always toggle testnet first when using testnet chains!
+        </Tip>
+
+        ## Step 4: Deploy the Contract
+
+        ```shell
+        forge create src/MyERC1155.sol:MyERC1155 \
+            --account skale-deployer \
+            --rpc-url skale_testnet \
+            --broadcast \
+            --legacy
+        ```
+
+        <Note>
+        The `--legacy` flag is required for SKALE deployments.
+        </Note>
+
+        Example output:
+
+        ```shell
+        Enter keystore password:
+        Deployer: 0x63a38D694de837dDF765f9b2704814275586D812
+        Deployed to: 0x4A435f6E471f773173774E860EBDcd17B132a2b4
+        Transaction hash: 0x3f6cc66e860cb82a6a62e3f5181c401e5558d60d622a9157437002e16c1ce488
+        ```
+
+        ## Step 5: Verify Your Smart Contract
 
-## Prerequisites
-
-- [Rust](https://www.rust-lang.org/tools/install) installed on your machine
-- [Foundry](https://getfoundry.sh) installed
-- A wallet with sFUEL
-- Basic knowledge of Solidity
-- A SKALE Chain endpoint
-
-<Note>
-If you are on a Windows machine, you will need to use Windows Subsystem for Linux (WSL), since Foundry doesn't work natively on Windows.
-</Note>
-
-## Step 1: Install Foundry
-
-If you haven't already installed Foundry, run:
-
-```shell
-foundryup
-```
-
-## Step 2: Create a New Foundry Project
-
-Run the following in your terminal:
-
-```shell
-forge init my-erc1155-token
-cd my-erc1155-token
-```
-
-## Step 3: Install OpenZeppelin Contracts
-
-Install OpenZeppelin Contracts using Foundry:
-
-```shell
-forge install OpenZeppelin/openzeppelin-contracts
-```
-
-This will add OpenZeppelin Contracts to your `lib` directory.
-
-## Step 4: Configure Remappings
-
-Update your `remappings.txt` file (or create it if it doesn't exist) to include:
-
-```
-@openzeppelin/=lib/openzeppelin-contracts/
-```
-
-## Step 5: Update Foundry Configuration
-
-Update the `foundry.toml` file to add your SKALE Chain endpoint:
-
-```toml
-[profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
-
-# SKALE Chain Configuration
-[rpc_endpoints]
-skale_testnet = "https://testnet.skalenodes.com/v1/juicy-low-small-testnet"
-# Replace with your SKALE Chain endpoint
-```
-
-## Step 6: Create the ERC-1155 Contract
-
-Create a new file `src/MyERC1155.sol`:
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.19;
-
-import "@openzeppelin/contracts/token/ERC1155/ERC1155.sol";
-
-contract MyERC1155 is ERC1155 {
-    // Token IDs
-    uint256 public constant GOLD = 0;
-    uint256 public constant SILVER = 1;
-    uint256 public constant SWORD = 2;
-    uint256 public constant SHIELD = 3;
-
-    constructor() ERC1155("https://myapi.com/api/token/{id}.json") {
-        // Mint initial supply
-        _mint(msg.sender, GOLD, 1000, "");      // 1000 gold tokens (fungible)
-        _mint(msg.sender, SILVER, 500, "");     // 500 silver tokens (fungible)
-        _mint(msg.sender, SWORD, 1, "");        // 1 sword (non-fungible)
-        _mint(msg.sender, SHIELD, 1, "");       // 1 shield (non-fungible)
-    }
-
-    function mint(address to, uint256 id, uint256 amount) public {
-        _mint(to, id, amount, "");
-    }
-
-    function mintBatch(
-        address to,
-        uint256[] memory ids,
-        uint256[] memory amounts
-    ) public {
-        _mintBatch(to, ids, amounts, "");
-    }
-}
-```
-
-This contract:
-- Inherits from OpenZeppelin's `ERC1155` contract
-- Defines multiple token types (GOLD, SILVER, SWORD, SHIELD)
-- Sets a base URI for metadata (replace with your own)
-- Includes `mint` function for single token minting
-- Includes `mintBatch` function for efficient batch minting
-- Mints initial supply to the deployer upon deployment
-
-<Note>
-The URI parameter in the constructor uses `{id}` as a placeholder that will be replaced with the actual token ID. Make sure your metadata server handles this correctly.
-</Note>
-
-## Step 7: Compile the Contract
-
-Compile your contract:
-
-```shell
-forge build
-```
-
-## Step 8: Prepare Signer for Deployment
-
-This tutorial uses the Foundry Keystore for increased security. Create a new keystore:
-
-```shell
-cast wallet import skale-deployer --private-key $(cast wallet new | grep 'Private key:' | awk '{print $3}')
-```
-
-<Note>
-Provide a password to encrypt the keystore file when running the above command. If you forget this password, you will not be able to recover it.
-</Note>
-
-Get your wallet address:
-
-```shell
-cast wallet address --account skale-deployer
-```
-
-Copy the address and head over to the [sFUEL Station](https://sfuelstation). Input the address, toggle testnet, and fill up on your SKALE Chain.
-
-<Tip>
-Make sure you toggle testnet on first if you're using a testnet chain!
-</Tip>
-
-## Step 9: Deploy the Contract
-
-Deploy your ERC-1155 token to SKALE:
-
-```shell
-forge create src/MyERC1155.sol:MyERC1155 \
-    --account skale-deployer \
-    --rpc-url skale_testnet \
-    --broadcast \
-    --legacy
-```
-
-<Note>
-The `--legacy` flag is required for SKALE Chains. For more information, see [Troubleshooting](/developers/troubleshooting).
-</Note>
-
-A successful deployment should look something like this:
-
-```shell
-Enter keystore password:
-Deployer: 0x63a38D694de837dDF765f9b2704814275586D812
-Deployed to: 0x4A435f6E471f773173774E860EBDcd17B132a2b4
-Transaction hash: 0x3f6cc66e860cb82a6a62e3f5181c401e5558d60d622a9157437002e16c1ce488
-```
-
-## Step 10: Mint Additional Tokens
-
-After deployment, you can mint additional tokens. For example, to mint more gold:
-
-```shell
-cast send <DEPLOYED_ADDRESS> \
-    "mint(address,uint256,uint256)" \
-    <RECIPIENT_ADDRESS> \
-    0 \
-    100 \
-    --account skale-deployer \
-    --rpc-url skale_testnet \
-    --legacy
-```
-
-This mints 100 GOLD tokens (ID 0) to the recipient address.
-
-To mint multiple token types in a single transaction (batch minting):
-
-```shell
-cast send <DEPLOYED_ADDRESS> \
-    "mintBatch(address,uint256[],uint256[])" \
-    <RECIPIENT_ADDRESS> \
-    "[2,3]" \
-    "[1,1]" \
-    --account skale-deployer \
-    --rpc-url skale_testnet \
-    --legacy
-```
-
-This mints 1 SWORD (ID 2) and 1 SHIELD (ID 3) to the recipient in a single transaction.
-
-## Step 11: Verify Your Smart Contract
-
-Verify your smart contract on the block explorer:
-
-```shell
-forge verify-contract \
-    --rpc-url skale_testnet \
-    <DEPLOYED_ADDRESS> \
-    src/MyERC1155.sol:MyERC1155 \
-    --verifier blockscout \
-    --verifier-url https://juicy-low-small-testnet.explorer.testnet.skalenodes.com/api
-```
-
-Replace `<DEPLOYED_ADDRESS>` with your deployed contract address.
-
-## Advanced: Adding Access Control
-
-To restrict minting to only the contract owner, you can add OpenZeppelin's `Ownable`:
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.19;
-
-import "@openzeppelin/contracts/token/ERC1155/ERC1155.sol";
-import "@openzeppelin/contracts/access/Ownable.sol";
-
-contract MyERC1155WithOwnable is ERC1155, Ownable {
-    uint256 public constant GOLD = 0;
-    uint256 public constant SILVER = 1;
-
-    constructor(address initialOwner)
-        ERC1155("https://myapi.com/api/token/{id}.json")
-        Ownable(initialOwner)
-    {}
-
-    function mint(address to, uint256 id, uint256 amount) public onlyOwner {
-        _mint(to, id, amount, "");
-    }
-
-    function mintBatch(
-        address to,
-        uint256[] memory ids,
-        uint256[] memory amounts
-    ) public onlyOwner {
-        _mintBatch(to, ids, amounts, "");
-    }
-}
-```
+        ```shell
+        forge verify-contract \
+            --rpc-url skale_testnet \
+            <DEPLOYED_ADDRESS> \
+            src/MyERC1155.sol:MyERC1155 \
+            --verifier blockscout \
+            --verifier-url https://juicy-low-small-testnet.explorer.testnet.skalenodes.com/api
+        ```
+    </Tab>
+
+    <Tab title="Deployment with Hardhat">
+
+        <Note title="Setup Hardhat">
+        ## Step 0: Setup Hardhat
+
+        If your Hardhat project isn't set up yet, go to the [Hardhat setup section](../deployment/setup-hardhat) before proceeding.
+        </Note>
+
+        ## Step 1: Create the ERC-1155 Contract
+
+        Create a contract script in `contracts/MyERC721.sol`. Run:
+        ```shell
+        touch contracts/MyERC1155.sol
+        ```
+
+        Add the contract code:
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "@openzeppelin/contracts/token/ERC1155/ERC1155.sol";
+
+        contract MyERC1155 is ERC1155 {
+            constructor() ERC1155("https://myapi.com/api/token/{id}.json") {}
+
+            function mint(address to, uint256 id, uint256 amount) public {
+                _mint(to, id, amount, "");
+            }
+
+            function mintBatch(
+                address to,
+                uint256[] memory ids,
+                uint256[] memory amounts
+            ) public {
+                _mintBatch(to, ids, amounts, "");
+            }
+        }
+        ```
+
+        ## Step 2: Compile Contracts
+
+        ```shell
+        npx hardhat compile
+        ```
+
+        ## Step 3: Create a Deployment Script
+
+        Create a deployment script in `scripts/deploy_erc1155.sol`. Run:
+        ```shell
+        touch scripts/deploy_erc1155
+        ```
+        
+        Add the deployment code:
+        ```javascript
+        const hre = require("hardhat");
+
+        async function main() {
+            const MultiToken = await hre.ethers.getContractFactory("MyERC1155");
+            const multi = await MultiToken.deploy();
+
+            await multi.waitForDeployment();
+
+            console.log("Contract deployed to:", await multi.getAddress());
+        }
+
+        main().catch((error) => {
+            console.error(error);
+            process.exit(1);
+        });
+        ```
+
+        ## Step 4: Run Tests
+
+        ```shell
+        npx hardhat test
+        ```
+
+        ## Step 5: Deploy to SKALE
+
+        ```shell
+        npx hardhat run scripts/deploy_erc1155.js --network skale_testnet
+        ```
+
+        ## SKALE-Specific Considerations
+
+        1. **Transaction Types**  
+        Hardhat usually handles this automatically, but ensure your version supports legacy transactions if required.
+
+        2. **Gas Configuration**
+
+        ```javascript
+        networks: {
+            skale_testnet: {
+                url: "...",
+                accounts: [...],
+                gasPrice: 0, // SKALE gas is always zero
+            },
+        },
+        ```
+
+        3. **Contract Verification**
+
+        ```shell
+        npx hardhat verify --network skale_testnet <CONTRACT_ADDRESS> <CONSTRUCTOR_ARGS>
+        ```
+    </Tab>
+</Tabs>
+
+---
 
 ## Next Steps
 
-Congratulations! You've successfully deployed an ERC-1155 token on SKALE. You can now:
+Congratulations! You've successfully deployed an ERC-1155 multi-token contract on SKALE. You can now:
 
-- Mint both fungible and non-fungible tokens in a single contract
-- Use batch operations for gas-efficient transfers
-- Build games, marketplaces, or multi-token applications
-- Transfer multiple token types in a single transaction
+- Mint fungible and non-fungible tokens  
+- Batch mint or transfer multiple token types  
+- Build advanced games, inventories, or multi-asset dApps  
+- Use metadata per token ID  
 
 ## Related Topics
 
@@ -275,4 +261,3 @@ Congratulations! You've successfully deployed an ERC-1155 token on SKALE. You ca
 - [Deploy an ERC-20 Token](/cookbook/smart-contracts/deploy-erc20-token)
 - [Deploy an ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token)
 - [Troubleshooting](/developers/troubleshooting)
-
